fixed font rendering of tilde and alignment in front page. stable.

--- a/Portfolio/_sass/jekyll-theme-midnight.scss
+++ b/Portfolio/_sass/jekyll-theme-midnight.scss
@@ -334,7 +334,7 @@ section {
     padding: 0 0 0px 0;
 
     h1 {
-      font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-weight: normal;
       font-size: 40px;
       text-align: left;
@@ -343,7 +343,7 @@ section {
 
     p {
       color: #d7cfbe;
-      font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-weight: normal;
       font-size: 18px;
       text-align: left;
