--- a/Portfolio/_sass/mainPage.scss
+++ b/Portfolio/_sass/mainPage.scss
@@ -248,7 +248,7 @@ section {
     padding: 0 0 5px 0;
 
     h1 {
-      font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-weight: normal;
       font-size: 40px;
       text-align: left;
@@ -257,10 +257,13 @@ section {
 
     p {
       color: #d7cfbe;
-      font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
       font-weight: normal;
       font-size: 18px;
       text-align: left;
+    }
+    p:nth-child(2) {
+      margin-left: -1.5px;
     }
 
     .credits {
